--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css">
+  <title>Timestamp Microservice</title>  
+</head>
 
-<html>
-   <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
+<body>
+  <div class="container">
+    <h1>Node.js Timestamp Microservice</h1>
+    <h3>How to use the API:</h3>
+    <ol class="user-stories">
+      <li>The API endpoint is <code>GET [project_url]/api/:date?</code></li>
+      <li>A date string is valid if can be successfully parsed by <code>new Date(date_string)</code>.<br>
+        Note that the unix timestamp needs to be an <strong>integer</strong> (not a string) specifying <strong>milliseconds</strong>.<br>
+        We will use date strings compliant with ISO-8601 (e.g. <code>"2016-11-20"</code>) because this will ensure an UTC timestamp.</li>
+      <li>If the date string is <strong>empty</strong> it should be equivalent to trigger <code>new Date()</code>, i.e. the service uses the current timestamp.</li>
+      <li>If the date string is <strong>valid</strong> the api returns a JSON having the structure<br><code>{"unix": &lt;date.getTime()&gt;, "utc" : &lt;date.toUTCString()&gt; }</code><br>
+        e.g. <code>{"unix": 1479663089000 ,"utc": "Sun, 20 Nov 2016 17:31:29 GMT"}</code></li>
+      <li>If the date string is <strong>invalid</strong> the api returns a JSON having the structure <br>
+        <code>{"error" : "Invalid Date" }</code>.
+      </li>
+      <li>If any other endpoint is called, it will return a 404 page.</li>
+    </ol>
 
-   <body>
-    <h1>Timestamp Microservice</h1>
-    <hr />
-    <div class="container">
-      <h3>Example Usage:</h3>
-      <ul>
-        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
-      </ul>
+    <h3>Example Usage:</h3>
+    <ul>
+      <li>
+        <a href="api/2015-12-25">[project url]/api/2015-12-25</a>
+      </li>
+      <li>
+        <a href="api/1450137600000">[project
+          url]/api/1450137600000</a>
+      </li>
+    </ul>
 
-      <h3>Example Output:</h3>
-      <p>
-        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-      </p>
-    </div>
-    <div class="footer">
-      <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
-      </p>
-    </div>
-  </body>
+    <h3>Example Output:</h3>
+    <p>
+      <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
+    </p>
+  </div>
+</body>
 </html>
